# VPD

./: readme.md
CarDNN/: CarDNN.py  CarStateDataset.py  DataLoader.py  JetsonCarDNN.py  JetsonDataLoader.py  Trainer.py  readme.md  requirements.txt
CarDNN/data/: car-data--1.pkl  car-data--2.pkl  car-data--3.pkl
CarDNN/dataset/: data_1.csv  data_2.csv  data_3.csv  data_4.csv  data_6.csv  data_7.csv  data_8.csv  data_9.csv
CarSimClient/: CarLogPlotter.py  CarSimClient.py  DNNEstimator.py  DummyRCI.py  RCIClient.py  SimToRCIBridge.py  main.py  readme.md  requirements.txt  utilities.py
CarSimClient/logs/: data_21-09--11-08-21_0.0-0.0-WO-s.pkl  data_21-09--11-38-47_1.0-0.5-WO-s.pkl  data_21-09--11-45-50_1.0-0.25-WO-s.pkl  data_21-09--11-50-25_1.0-0.25-PD-s.pkl  data_21-09--11-54-44_1.0-0.5-PD-s.pkl  data_21-09--12-13-45_0.0-0.0-WO-s.pkl  data_21-09--12-17-39_1.0-0.25-WO-s.pkl  data_21-09--12-23-33_1.0-0.5-WO-s.pkl  data_21-09--13-14-10_1.0-0.25-PVD-s.pkl  data_21-09--13-19-33_1.0-0.5-PVD-s.pkl  data_21-09--13-23-48_1.0-0.0-PD-s.pkl  data_21-09--13-26-58_1.0-0.25-PD-s.pkl  (+27 more)
RC_UI/: readme.md
VR_CarSim/: .gitattributes  readme.md
VR_car_client/: .gitignore  readme.md
jetson_on_wheels/: .gitignore  CMakeLists.txt  readme.md
jetson_on_wheels/Arduino/sensors_data_collector/: sensors_data_collector.ino
jetson_on_wheels/launch/: rs_t265.launch  run_jetson_on_wheels.launch  run_rosbridge_server.launch
jetson_on_wheels/src/: clock_sync.cpp  logger.py  motor_controller.cpp  steering_controller.cpp  wheel_odometry_publisher.py
jetson_on_wheels/srv/: ClockSync.srv
(+669 files in other folders)
